pythonのバージョンを変更
pythonのバージョンを3.8に指定
また、ライブラリのインストールも
pip3.8で行うように変更を加えた。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     volumes:
       - './deploy:/home/deploy'
     working_dir: '/home/deploy'
-    command: python3 -m pip install -r requirements.txt -t python/
+    command: pip3.8 install -r requirements.txt -t python/
